@@ -12,5 +12,7 @@
     <a href="link with space.html">not encoded space</a>
     <!-- End escaped bug -->
     <a href="unusual&&%3F%3F%23%23.html">unusual characters</a>
+
+    <a href="javascript:new_page('1')">javascript link</a>
   </body>
 </html>
